# otsmolyak

./: CMakeLists.txt  README.rst
cmake/: OtSmolyakConfig.cmake.in  UseOtSmolyak.cmake
distro/debian/: changelog  control  rules
distro/rpm/: otsmolyak.spec
distro/windows/: README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otsmolyak/: OtSmolyak.hxx  OtSmolyakprivate.hxx
lib/src/: CMakeLists.txt  Smolyak.cxx  SmolyakExperiment.cxx  SmolyakImplementation.cxx  smolpack.cc  smolpack.hh
lib/src/otsmolyak/: Smolyak.hxx  SmolyakExperiment.hxx  SmolyakImplementation.hxx
lib/src/smolpack/: CMakeLists.txt  smolpack.cc
lib/src/smolpack/otsmolyak/: smolpack.hh
lib/test/: CMakeLists.txt  t_SmolyakExperiment_std.cxx  t_SmolyakExperiment_std.expout  t_Smolyak_std.cxx  t_Smolyak_std.expout
python/doc/: conf.py.in  index.rst
python/doc/developer_guide/architecture/: architecture.rst
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  Smolyak.i  SmolyakExperiment.i  SmolyakExperiment_doc.i.in  SmolyakImplementation.i  SmolyakImplementation_doc.i.in  Smolyak_doc.i.in  __init__.py  otsmolyak_module.i
python/test/: CMakeLists.txt  t_SmolyakExperiment_std.py  t_Smolyak_std.expout  t_Smolyak_std.py  t_docstring.expout  t_docstring.py
